css/style.css
/* Primary */

#bs-override {
    margin: 0;
    color: white;
    background: url(../img/barbg.png) no-repeat center center fixed;
    background-size: cover;
    color: white;
    font-family: 'Raleway', sans-serif;
}

#bs-override a:active,
#bs-override a:visited,
#bs-override a:hover {
    color: white;
    text-decoration: none;
}

li,
button,
.event-title,
h3,
h4 {
    font-family: 'Alegreya Sans SC', serif !important;
    font-weight: 800;
}

ul li {
    text-decoration: none;
    list-style: none;
}

ul li:hover {
    background-color: rgba(0, 0, 0, .9);
}

li {
    display: inline-block;
    margin-left: 1.5em;
    margin-right: 1.5em;
    font-size: 17px;
}

ul a {
    color: white;
    text-decoration: none;
}

a:hover {
    text-decoration: none;
    color: white;
}

.navi {
    background-color: rgba(0, 0, 0, .6);
    width: 100%;
    height: 56px;
    line-height: 56px;
    text-align: center;
    margin-top: 0;
    display: block;
}

.navi ul {
    margin: 0;
}

.navi img .logo-img {
    position: absolute;
    color: #fff;
    display: inline-block;
    font-size: 2.1rem;
    padding: 0;
    white-space: nowrap;
}


/* Quick Alignment */

.img-shrink {
    max-width: 100%;
    height: auto;
}

.img-fit {
    height: 100%;
    width: 100%;
}

.place-right {
    float: right;
    margin-left: 1em;
    margin-right: .5em;
}

.place-left {
    float: left;
    margin-left: .5em;
    margin-right: 1em;
}

.centered {
    text-align: center;
}

.vert {
    margin-top: 10em;
}

.vert-event {
    margin-top: 5em;
}

.vert-layout {
    margin-top: 10em;
}

.vert-gallery {
    margin-top: 4em;
    margin-bottom: 4em;
}

.vert-home {
    margin-top: 5em;
    margin-bottom: 3em;
}

.vert-event {
    margin-top: 8em;
    margin-bottom: 5em;
}


/* Landing Page */

#event-box,
.home-box {
    width: 100%;
    border: 0;
}

#event-box {
    margin: 0 auto;
    height: auto;
    margin-top: 2em;
    padding: 2em;
    overflow: hidden;
    background-color: rgba(0, 0, 0, .7);
}

.home-box {
    height: 10em;
    background: url(../img/pubabout.jpg)no-repeat center center fixed;
    background-size: cover;
    filter: grayscale(100%);
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.logo {
    margin-left: 7em;
    margin-right: 5em;
}

.event-slide-box {
    width: 100%;
    height: auto;
    padding-top: 2em;
}

.link-align {
    text-align: right;
}

.ev-not-title {
    font-size: 14px;
    font-weight: 200;
}

.ev-pad {
    margin: .5em;
    justify-content: center;
}


/* About */

.about-box {
    background-color: rgba(0, 0, 0, .5);
    height: 20em;
    padding: 7.5em;
}


/* Layout Page */

.layout-col,
.layout-img {
    align-self: center;
    padding: 2em;
}

.layout-img {
    width: 100%;
    height: 100%;
}


/* Event Page */

.event-title {
    font-size: 18px;
}

.event-page {
    background-color: rgba(0, 0, 0, .5);
    padding: 2em;
}

.event-row {
    padding: 1em;
}

.event-col {
    padding: 3em .5em .5em .5em;
}

.button-row {
    margin-left: 10em;
    margin-right: 10em;
}

button {
    background-color: #184F84;
    border: 0;
    margin-top: 3em !important;
    padding: .6em;
    color: white;
    font-weight: 600 !important;
    font-size: 17px !important;
}


/* Contact */

.contact-box {
    background-color: rgba(0, 0, 0, .5);
    padding: 2em;
}


/* Gallery */

.gallery-pic:hover {
    background-color: rgba(255, 255, 255, .4);
}


/* Flex Alignment */

.contain-flex,
.contained {
    margin: 0 auto;
    max-width: 100%;
}

.contained {
    width: 90%;
}

.contain-flex {
    width: 60%;
    display: flex;
    flex-wrap: wrap;
}

.flex-row2,
.flex-row {
    flex-direction: row;
    flex-basis: 100%;
}

.flex-row {
    justify-content: center;
    align-content: center;
}

.contained .row-set {
    margin-left: -0.75rem;
    margin-right: -0.75rem;
}

@media only screen and (min-width: 601px) {
    .contained {
        width: 85%;
    }
}

@media only screen and (min-width: 993px) {
    .contained {
        width: 70%;
    }
}


/* Row-set/Column Structure */

.row-set {
    margin-left: auto;
    margin-right: auto;
}

.row-set:after {
    content: "";
    display: table;
    clear: both;
}

.row-set .col {
    float: left;
    box-sizing: border-box;
    min-height: 1px;
}

.row-set .col.s1 {
    width: 8.3333333333%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s2 {
    width: 16.6666666667%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s3 {
    width: 25%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s4 {
    width: 33.3333333333%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s5 {
    width: 41.6666666667%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s6 {
    width: 50%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s7 {
    width: 58.3333333333%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s8 {
    width: 66.6666666667%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s9 {
    width: 75%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s10 {
    width: 83.3333333333%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s11 {
    width: 91.6666666667%;
    margin-left: auto;
    left: auto;
    right: auto;
}

.row-set .col.s12 {
    width: 100%;
    margin-left: auto;
    left: auto;
    right: auto;
}

